--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,13 @@
     "start": "ts-node src/server.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "zie-lu",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.24.0",
     "@types/express": "^5.0.1",
+    "@types/morgan": "^1.9.9",
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
     "typescript": "^5.8.3",
@@ -22,6 +23,7 @@
     "dotenv": "^16.4.7",
     "envalid": "^8.0.0",
     "express": "^5.1.0",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+    "morgan": "^1.10.0"
   }
 }
